--- a/pom.xml
+++ b/pom.xml
@@ -20,11 +20,6 @@
   </build>
   <dependencies>
   	<dependency>
-  		<groupId>com.guigarage</groupId>
-  		<artifactId>flatter</artifactId>
-  		<version>0.7</version>
-  	</dependency>
-  	<dependency>
   		<groupId>com.jfoenix</groupId>
   		<artifactId>jfoenix</artifactId>
   		<version>1.2.0</version>
@@ -33,6 +28,11 @@
   		<groupId>net.sourceforge.htmlunit</groupId>
   		<artifactId>htmlunit</artifactId>
   		<version>2.25</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.jsoup</groupId>
+  		<artifactId>jsoup</artifactId>
+  		<version>1.10.2</version>
   	</dependency>
   </dependencies>
 </project>
